[Style.min.css] Ajout d'un effet hover aux <a> de la nav bar
Ajout de l'accessibilité et la lisibilité au site par les utilisateurs

--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
 a,
 button {
     transition: all .3s ease-in-out;
-    outline: none!important;
+    outline: none;
 }
 
 a:hover {
@@ -333,9 +333,10 @@ a:hover {
     text-align: inherit;
 }
 
-.nav > li a:hover,
-.nav > li a:focus {
+.nav>li a:hover,
+.nav>li a:focus {
     background: transparent;
+    color: #F3976C !important;
 }
 
 .navbar-toggle {
@@ -652,7 +653,7 @@ label,
 a {
     font-family: "helvetica";
     font-weight: 400;
-    color: #1a1a1a!important;
+    color: #1a1a1a;
 }
 
 .container {
